# Generate_Sustainability_Report

./: README.md  compliance_data.json  environmental_data.json  lca_data.json  product_data.json  pyproject.toml  supplier_data.json  sustainability_metrics.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
generate_sustainability_report/: database.py  main.py  models.py  schemas.py
generate_sustainability_report/report_generator/: db_query_reporter.ipynb  main.py  report_generator.py
